@@ -12,19 +12,20 @@ import org.springframework.stereotype.Component;
 import java.io.File;
 import java.io.IOException;
 import java.time.Instant;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 @Component
 @RequiredArgsConstructor
 public class LoginSessionStorageWriter {
+    private static final String FILE_PATH = "src/test/resources/storageState.json";
+    private static final String DOMAIN = "advisor-test.pontera.com";
+    private static final long TEN_YEARS_SECONDS = 60L * 60 * 24 * 365 * 10;
+    private static final String FEE_X_USER_VALUE = "userId%3D453631918%26autoLogin%3Dfalse%26r%3Dmem9ir1cvmltsotbqona17ddtj%26c%3Dxxencrypted2xx...";
+    private static final String CC_VALUE = "tuacce215pgie8v2efom5f7v7p";
+    private static final String USER_ID = "453631918";
+
     @Value("${auth.email}")
     private String advisorEmail;
-    private final String FILE_PATH = "src/test/resources/storageState.json";
-    private final String DOMAIN = "advisor-test.pontera.com";
-    private final long TEN_YEARS_SECONDS = 60L * 60 * 24 * 365 * 10;
 
     private final AuthenticationApi authenticationApi;
     private final AuthenticationDataProvider dataProvider;
@@ -33,50 +34,49 @@ public class LoginSessionStorageWriter {
         if (!isStorageFileExpired()) {
             return;
         }
-        List<Map<String, Object>> cookies = new ArrayList<>();
 
-        Map<String, String> apiCookies = getApiCookies();
-        addBasicCookies(cookies, apiCookies);
-        addStaticCookies(cookies);
+        List<Map<String, Object>> cookies = new ArrayList<>();
+        Map<String, String> apiCookies = fetchApiCookies();
+
+        addApiSessionCookies(cookies, apiCookies);
+        addPersistentCookies(cookies);
 
         Map<String, Object> storage = Map.of(
                 "cookies", cookies,
-                "origins", List.of()
+                "origins", Collections.emptyList()
         );
 
         writeJsonToFile(storage);
     }
 
-    private Map<String, String> getApiCookies() {
+    private Map<String, String> fetchApiCookies() {
         LoginRequest request = dataProvider.createLoginRequest();
         Response response = authenticationApi.sendLoginRequest(request);
         return response.getCookies();
     }
 
-    private void addBasicCookies(List<Map<String, Object>> cookies, Map<String, String> apiCookies) {
+    private void addApiSessionCookies(List<Map<String, Object>> cookies, Map<String, String> apiCookies) {
         addCookie(cookies, "JSESSIONID", apiCookies.get("JSESSIONID"), null, true);
         addCookie(cookies, "AWSALB", apiCookies.get("AWSALB"), null, false);
         addCookie(cookies, "AWSALBCORS", apiCookies.get("AWSALBCORS"), null, false);
     }
 
-    private void addStaticCookies(List<Map<String, Object>> cookies) {
-        String longExpiry = Instant.now().plusSeconds(TEN_YEARS_SECONDS).toString();
+    private void addPersistentCookies(List<Map<String, Object>> cookies) {
+        String expiryISO = Instant.now().plusSeconds(TEN_YEARS_SECONDS).toString();
 
-        addCookie(cookies, "feex-user", "userId%3D453631918%26autoLogin%3Dfalse%26r%3Dmem9ir1cvmltsotbqona17ddtj%26c%3Dxxencrypted2xx...",
-                longExpiry, false);
-
-        addCookie(cookies, "user-id", "453631918", null, false);
+        addCookie(cookies, "feex-user", FEE_X_USER_VALUE, expiryISO, false);
+        addCookie(cookies, "user-id", USER_ID, null, false);
         addCookie(cookies, "user-email", advisorEmail, null, false);
         addCookie(cookies, "login-time", String.valueOf(System.currentTimeMillis()), null, false);
-        addCookie(cookies, "CC", "tuacce215pgie8v2efom5f7v7p", null, false);
+        addCookie(cookies, "CC", CC_VALUE, null, false);
     }
 
     private void addCookie(List<Map<String, Object>> cookies, String name, String value, String expiryISO, boolean httpOnly) {
-        if (value == null) {
-            return;
-        }
+        if (value == null) return;
 
-        Long expires = expiryISO != null ? Instant.parse(expiryISO).getEpochSecond() : Instant.now().getEpochSecond() + 3600;
+        long expires = expiryISO != null
+                ? Instant.parse(expiryISO).getEpochSecond()
+                : Instant.now().getEpochSecond() + 3600;
 
         Map<String, Object> cookie = new HashMap<>();
         cookie.put("name", name);
@@ -103,9 +103,9 @@ public class LoginSessionStorageWriter {
             throw new IllegalArgumentException("Storage file not found at path: " + FILE_PATH);
         }
 
-        Instant lastModifiedTime = Instant.ofEpochMilli(file.lastModified());
-        Instant expiryThreshold = Instant.now().minusSeconds(15 * 60);
+        Instant lastModified = Instant.ofEpochMilli(file.lastModified());
+        Instant threshold = Instant.now().minusSeconds(15 * 60);
 
-        return lastModifiedTime.isBefore(expiryThreshold);
+        return lastModified.isBefore(threshold);
     }
 }
